--- a/toDoListV3/index.html
+++ b/toDoListV3/index.html
@@ -19,8 +19,15 @@
                 </select>
             </div>
             <div class="todo__new__input">
-                <input id="add" type="txt" placeholder="Введите новую задачу">
-                <button id="btn-add-task" onclick="addTask()"><img src="plus.png" width="25" height="25"></button>
+                <input id="add"
+                       type="txt"
+                       placeholder="Введите новую задачу">
+                <button id="btn-add-task"
+                        onclick="addTask()">
+                    <img src="plus.png"
+                         width="25"
+                         height="25">
+                </button>
             </div>
         </div>
         <div class="todo__filters">
@@ -36,11 +43,17 @@
             <div class="todo__filters__status">
                 <span>Фильтр по статусу:</span>
                 <span>активные</span>
-                <input type="checkbox">
-                <span>отмеченные</span>
-                <input type="checkbox">
+                <input id="checkbox-filter-active"
+                       type="checkbox"
+                       onclick="filterByActive()">
+                <span>отмененные</span>
+                <input id="checkbox-filter-cancelled"
+                       type="checkbox"
+                       onclick="filterByCancelled()">
                 <span>завершенные</span>
-                <input type="checkbox">
+                <input id="checkbox-filter-completed"
+                       type="checkbox"
+                       onclick="filterByCompleted()">
             </div>
         </div>
         <div class="todo__sort">
@@ -52,7 +65,9 @@
                     <div class="todo__sort__button">
                         <span>Дата создания</span>
                         <div class="arrow">
-                            <img src="arrow.png" width="12" height="12">
+                            <img src="arrow.png"
+                                 width="12"
+                                 height="12">
                         </div>
                     </div>
                 </div>
@@ -63,7 +78,9 @@
                     <div class="todo__sort__button">
                         <span>Приоритет</span>
                         <div class="arrow">
-                            <img src="arrow.png" width="12" height="12">
+                            <img src="arrow.png"
+                                 width="12"
+                                 height="12">
                         </div>
                     </div>
                 </div>
@@ -71,10 +88,13 @@
         </div>
         <div class="todo__find">
             <span>Поиск задачи по тексту:</span>
-            <input id="input-find" type="txt" placeholder="Начните вводить текст задачи...">
+            <input id="input-find"
+                   type="txt"
+                   placeholder="Начните вводить текст задачи...">
         </div>
     </div>
-    <div id="task-list" class="todo__tasks">
+    <div id="task-list"
+         class="todo__tasks">
     </div>
 </div>
 <script src="main.js"></script>
