много всего сделано

--- a/toDoListV3/index.html
+++ b/toDoListV3/index.html
@@ -33,7 +33,7 @@
         <div class="todo__filters">
             <div class="todo__filters__priority">
                 <span class="todo__filters__priority__span">Фильтр по приоритету:</span>
-                <select class="todo__select__priority">
+                <select id="select-filter-priority" class="todo__select__priority">
                     <option>Любой</option>
                     <option>Низкий</option>
                     <option>Средний</option>
