--- a/toDoListV3/index.html
+++ b/toDoListV3/index.html
@@ -46,9 +46,15 @@
                     <option value="4">
                         Любой
                     </option>
-                    <option value=1>Низкий</option>
-                    <option value=2>Средний</option>
-                    <option value=3>Высокий</option>
+                    <option value=1>
+                        Низкий
+                    </option>
+                    <option value=2>
+                        Средний
+                    </option>
+                    <option value=3>
+                        Высокий
+                    </option>
                 </select>
             </div>
             <div class="filters__status">
@@ -72,8 +78,8 @@
                 <div class="sort__date">
                     <span class="sort__date__span">Сортировка по дате:</span>
                     <div id="sort-by-date"
-                         class="sort__button"
-                         onclick="changeDate()">
+                         onclick="changeDate()"
+                         class="sort__button">
                         <span>Дата создания</span>
                         <div id="arrow-date"
                              class="arrow">
