--- a/toDoListV3/index.html
+++ b/toDoListV3/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>ToDo лист</title>
     <link rel="stylesheet"
-          href="main.css">
+          href="styles.css">
 </head>
 <body>
 <div class="todo">
